Creado mediante Colaboratory

--- a/Juego1.ipynb
+++ b/Juego1.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "name": "Juego1.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyN9tmC25KEJj/TqinKYXnHk",
+      "authorship_tag": "ABX9TyO9ZExl9BzEa+S+UPCSzM32",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -39,6 +39,7 @@
         "    def __init__(self,rens,cols,generaciones,poblacion):\n",
         "        self.largo=cols\n",
         "        self.alto=rens\n",
+        "        self.grid.clearing(self.cm)\n",
         "        self.grid=Array2D(self.alto, self.largo,0)\n",
         "        self.generaciones=generaciones\n",
         "\n",
@@ -63,6 +64,11 @@
         "        return self.alto\n",
         "    def get_num_cols(self):\n",
         "        return self.largo\n",
+        "    \n",
+        "    def clearing(self, valor=0):\n",
+        "        for ren in range(self.__rows):\n",
+        "            for col in range(self.__cols):\n",
+        "                self.__array[ren][col]=valor\n",
         "\n",
         "    def set_celula_muerta(self,row,col):\n",
         "        self.grid.set_item(row,col,self.cm)\n",
